fix(front): fix hugerte fullscreen + higerte min height + partially fix blurry svg

--- a/frontend_app_logbook/src/css/index.styl
+++ b/frontend_app_logbook/src/css/index.styl
@@ -149,9 +149,9 @@ cardWidth = 280px
         position fixed
         width "calc(100% - %s)" % closedSidebarWidth
         height 100%
-        // INFO - GB - 2022-08-09 - .logbook.fullscreen has z-index 2 to be above TinyMCE (.tox .tox-editor-header)
+        // INFO - GB - 2022-08-09 - .logbook.fullscreen has z-index 3 to be above TinyMCE (.tox .tox-editor-header)
         // In case advanced edition is enabled at the moment the user goes into fullscreen mode.
-        z-index 2
+        z-index 3
         background offWhite
 
       &__options
